<resources>
    <string name="app_name">CriminalIntent</string>
    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="crime_photo_button_description">Take photo of crime scene</string>
    <string name="crime_photo_no_image_description">
        Crime scene photo (not set)
    </string>
    <string name="crime_photo_image_description">Crime scene photo (set)</string>
    <string name="new_crime">New Crime</string>
    <string name="crime_suspect_text">Choose Suspect</string>
    <string name="crime_report_text">Send Crime Report</string>
    <string name="crime_report">%1$s!
        The crime was discovered on %2$s. %3$s, and %4$s
    </string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect.</string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>
    <string name="date_format_pattern">EEEE, MMMM d, HH:mm:ss zzz,yyyy</string>
    <string name="crime_audio">Set Audio</string>
    <string name="crime_delete">Delete Crime</string>

    <!-- Audio Fragment -->
    <string name="audio_record_start">Start Recording</string>
    <string name="audio_record_stop">Stop Recording</string>
    <string name="audio_upload">Upload Audio</string>
    <string name="audio_play">Play</string>
    <string name="audio_stop">Stop</string>
    <string name="audio_pause">Pause</string>
    <string name="audio_resume">Resume</string>
    <string name="audio_slow_play">Slow Play</string>
    <string name="audio_status_ready">Ready</string>
    <string name="audio_status_recording">Recording…</string>
    <string name="audio_status_complete">Recording complete</string>
    <string name="audio_recording_failed">Recording failed</string>
    <string name="audio_playback_failed">Playback failed</string>
    <string name="audio_status_uploading">Uploading</string>
    <string name="audio_status_upload_success">Upload Successfully!</string>
    <string name="audio_status_upload_failed">Upload Failed</string>
    <string name="audio_status_playing">Playing…</string>
    <string name="audio_status_slow_playing">Slow playing…</string>
    <string name="audio_status_paused">Paused</string>
    <string name="audio_status_finished">Playback finished</string>
    <string name="audio_permission_required">Microphone permission required</string>
    <string name="audio_permission_denied">Permission denied, cannot record</string>
    <string name="audio_recording_canceled">Recording canceled</string>

    <string name="storage_permission_required">Storage permission required to select files</string>
    <string name="audio_no_file_to_play">No audio file to play</string>

    <string name="invalid_crime_id">Invalid crime ID</string>
    <string name="crime_not_found">Crime not found</string>
    <string name="audio_file_saved">Audio saved successfully</string>
    <string name="audio_file_failed">Failed to read audio</string>
    <string name="audio_file_save_failed">Failed to save audio</string>
    <string name="select_audio_file">Select Audio File</string>
    <string name="select_audio_only">Please select an audio file</string>
    <string name="no_file_selected">No file selected</string>
</resources>